# WordPulse

./: .gitignore  CMakeLists.txt  CMakeLists.txt.pQSeFE  config.json
.github/workflows/: demo.yml  full_flow.yml
resources/: Main.qml  WordPulse.desktop
resources/qml/: Main.qml
src/: blockanalyzerthread.cpp  blockanalyzerthread.h  config.cpp  config.h  filereaderthread.cpp  filereaderthread.h  idataprovider.cpp  idataprovider.h  logger.cpp  logger.h  main.cpp  topwordsmodel.cpp  topwordsmodel.h  wordpulseviewmodel.cpp  wordpulseviewmodel.h
tests/: mockdataprovider.cpp  mockdataprovider.h  tst_analyzer.cpp
